--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="body_default_size">14sp</dimen>
     <dimen name="magin_32">32dp</dimen>
     <dimen name="magin_8">8dp</dimen>
+    <dimen name="service_icon_size">100dp</dimen>
 </resources>
